[package]
name = "meeting-notifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.8", features = ["derive"] }
color-eyre = "0.6.2"
windows = { version = "0.48.0", features = ["Win32_System_ProcessStatus", "Win32_Foundation", "Win32_System_Threading"] }
